# misa-scd

./: .gitignore  LICENSE  README  README.md  README.txt
doc/: MISA-SCD-Doc.md
examples/Dunn2016_Fe_FrenkelPair-clustering/: configure.in
examples/Dunn2016_Fe_FrenkelPair-noClustering/: configure.in
examples/RPV_FeCu_Cascade/: configure-copy2.in  configure.in
examples/RPV_FeCu_FrenkelPairs/: configure.in
examples/SANS_Fe0.1Cu_Cascade/: configure.in
examples/SANS_Fe0.3Cu_Cascade/: configure.in
examples/SANS_Fe_Cascade/: configure.in
examples/SRSCD_Fe_Cascade/: configure.in
examples/Test1-FeCu/: configure.in
examples/Test2-FeCu-Cascade/: configure.in
examples/Test2-FeCu-FrenkelPairs/: configure.in
examples/Test3-Fe-Annealing/: configure.in
examples/Test3-FeCu-Annealing/: configure.in
examples/W_Cascade/: configure.in
inputs/: 600K_10keV_122.txt  FeCu_Defects-full.txt  FeCu_Defects.txt  FeCu_Defects_Cas.txt  FeCu_Defects_FP.txt  Fe_Cascades.txt  Fe_Defects.txt  Fe_Defects_Cas.txt  Fe_Defects_Cu.txt  Fe_Defects_HeSIA.txt  Fe_Defects_HeSIAPinning.txt  Fe_Defects_noCu-test.txt  Fe_Defects_noCu.txt  GB_Defects.txt  ImplantProfile.txt  ImplantProfile_noHe.txt  MeshGen.f90  Mesh_Bicrystal.txt  Mesh_Bulk.txt  Mesh_ThinFilm_Large.txt  Pores_Defects.txt  W_Defects_Cas-copy.txt  W_Defects_Cas.txt
inputs/MeshGenInputs/: MeshGenInput_Bulk.txt  MeshGenInput_IsoAnneal.txt  PolyXtal30Grains.xyz
inputs/cascades/: 600K_10keV.txt  600K_10keV_122.txt  600K_25keV_loop.txt  600K_25keV_noloop.txt  FeCu1.5_773.txt  Fe_20KeV_Cascades.txt  W_100keV_Cascades.txt
inputs/defectsAttributes/: Cu_Defects_Aging.txt  FeCu_Defects-full.txt  FeCu_Defects_Cas.txt  FeCu_Defects_FP.txt  Fe_Defects.txt  Fe_Defects_FP_clustering.txt  Fe_Defects_FP_noClustering.txt  W_Defects_Cas.txt
inputs/meshes/: Mesh_SingleCrystal.txt  Mesh_noClustering.txt
inputs/pkas/: cpdf.w-DEMO
meshes/: MeshGen.f90  MeshGenInput_Bulk.txt  Mesh_DebugRestart.txt  Mesh_Polycrystal.txt  Mesh_SingleCrystal.txt  Mesh_ThinFilm.txt  Mesh_clustering_high.txt
meshes/MeshGenInputs/: MeshGenInput_Bicrystal.txt  MeshGenInput_Bulk.txt  MeshGenInput_ThinFilm.txt  MeshGenInput_ThinFilm_Large.txt
meshes/MeshGenInputs/CVS/: Entries  Repository  Root
src/: Cascade_implantation.f90  CoarseMesh_subroutines.f90  Deallocate_Lists.f90  Debug_subroutines.f90  Defect_attributes.f90  FineMesh_subroutines.f90  Initialization_subroutines.f90  MISASCD_par.f90  MeshReader.f90  Misc_functions.f90  PointDefect_concentration.f90  Postprocessing_srscd.f90  ReactionRates.f90  Read_inputs.f90  SRSCD_par.f90  StrainSubroutines.f90  derivedtype.f90  derivedtype.mod  dprand.f90  kMC_subroutines - 副本.f90  kMC_subroutines.f90  makefile  makefile-test  meshreader.mod  mod_constants.f90  mod_derivedtypes.f90  mod_globalVariables.f90  mod_globalvariables.f90  mod_randdp.f90  mod_reactionRates.f90  mod_reactionrates.f90  mod_srscd_constants.f90  mod_srscd_constants.mod  mod_structures.f90  mod_updatereactions.f90  randdp.mod  reactionrates.mod  src_MISASCD.f90  src_SPKMC.f90  src_cascadeImplantation.f90  (+13 more)
tests/Bulk_Cascade/: parameters-Fe.txt  parameters.txt
tests/Bulk_CuPrecipitate_Cascade/: README.txt  parameters.txt
tests/Bulk_CuPrecipitate_FrenkelPairs/: parameters copy.txt  parameters.txt
tests/Bulk_CuPrecipitate_ThermalAgeing/: parameters.txt
tests/Bulk_Cu_Precipitate/: parameters.txt
tests/Bulk_FrenkelPairs/: parameters.txt
tests/Bulk_Implantation_Cascade/: parameters.txt
tests/Bulk_Polycrystal_Fe/: parameters.txt
tests/Bulk_PureFe_Cascade/: parameters.txt
tests/Debug_Restart/: README.txt  debugRestart.in  parameters.txt
tests/Dunn2016_Fe_FrenkelPair-clustering/: parameters.txt
tests/Dunn2016_Fe_FrenkelPair-noClustering/: parameters.txt
tests/GrainBoundary/: parameters.txt
tests/He_Desorption/: README.txt  parameters.txt
tests/Isochronal_Annealing/: README.txt  parameters.txt
tests/Nanoporous/: README.txt  parameters.txt
tests/PolyCrystal/: parameters.txt
tests/RPV_FeCu_Cascade/: parameters.txt
tests/RPV_FeCu_FrenkelPairs/: parameters.txt
tests/SANS_Fe0.1Cu_Cascade/: parameters.txt
tests/SANS_Fe0.3Cu_Cascade/: parameters.txt
tests/SANS_Fe_Cascade/: parameters.txt
tests/SRSCD_Fe_Cascade/: parameters.txt
tests/Sequential_Implantation_Cascade+Heimplantation/Sim1_Cascade/: Restart 0.in  Restart 1.in  Restart 2.in  Restart 3.in  Restart 4.in  Restart 5.in  Restart 6.in  Restart 7.in  parameters.txt
tests/Sequential_Implantation_Cascade+Heimplantation/Sim2_HeImplantation/: CascadeImplant.in  parameters.txt
tests/Sequential_Implantation_Heimplantation+Cascade/Sim1_HeImplantation/: Restart 0.in  Restart 1.in  Restart 2.in  Restart 3.in  Restart 4.in  Restart 5.in  Restart 6.in  Restart 7.in  parameters.txt  postpr 1.out  totdat 1.out
tests/Sequential_Implantation_Heimplantation+Cascade/Sim2_CascadeImplantation/: HeImplant.in  parameters.txt  postpr 1.out  totdat 1.out
tests/SingleCrystal_pureW_Cascade/: parameters.txt
tests/Test1-CuPrecipitate/: parameters.txt
tests/Test1-FeCu/: parameters.txt
tests/Test2-CuPrecipitate-Cascade/: parameters.txt
tests/Test2-CuPrecipitate-FrenkelPairs/: parameters.txt
tests/Test2-FeCu-Cascade/: parameters.txt
tests/Test2-FeCu-FrenkelPairs/: parameters.txt
tests/Test3-Fe-Annealing/: parameters.txt
tests/Test3-FeCu-Annealing/: parameters.txt
tests/ThinFilm_FrenkelPairs/: README.txt  parameters.txt
tests/ThinFilm_He/: README.txt  parameters.txt
tests/ThinFilm_NonUniform_Implantation/: README.txt  parameters.txt
tests/W_Cascade/: parameters.txt
tools/: MeshGen.f90
tools/MeshGenInputs/: MeshGenInput_Nanoporous.txt  MeshGenInput_Polycrystal.txt
tools/MeshGenerator/: MeshGen.f90
