!***************************************************************************************************
!>This is the overall parameters file that will be used for MISA-SCD1.0
!>It necessary simulation parameters and some filenames of various other input files used in the simulation.
!>Description:
!>(Meslin et al, JNM, 2010) SANS
!>Dislocation ring evolution.
!>Note, the order of these parameters can be adjusted but each parameter must come directly after the tag for it.
!>For example, the relative location of defect file must come directly after 'defectFile'.
!***************************************************************************************************
!>Toggles: Used to control the simulation process
!***************************************************************************************************
defectFile              !<Location of the defect attributes file.
'../../inputs/defectsAttributes/FeCu_Defects_Cas.txt'

implantType             !<('Cascade': neutron irradiation, 'FrenkelPair': electron irradiation, 'None': no irradiation).
Cascade

implantScheme           !<('MonteCarlo' for MC cascade implantation, 'explicit' for explicit cascade implantation).
MonteCarlo

PKAspectrum             !('yes' or 'no') Whether to use the PKA spectrum
no

pkaFile                 !Location of the PKA spectrum file
'../../inputs/pkas/'

numCascadeFiles         !Number of cascade files
1

cascadeFile             !<Location of the cascade file.
'../../inputs/cascades/Fe_20KeV_Cascades.txt'

meshingType             !<('adaptive' or 'nonAdaptive') Whether we are using adaptive meshing protocol or not (adaptive for yes, nonAdaptive for no).
nonAdaptive

grainBoundaries	        !<('yes' or 'no') Whether or not we are going to include the effect of grain boundaries.
no

pointDefect             !<('yes' or 'no') Whether or not point defects are allowed to move only.
yes

!***************************************************************************************************
!Simulation Parameters
!The order of these parameters can be adjusted but each parameter must come directly after the tag
!for it. For example, the temperature must come directly after 'temperature'.
!***************************************************************************************************
SimulationStart			!<Tag for the beginning of the simulation parameters

temperature		        !<Double precision. Temperature (unit: K).
573d0

CuContent               !<Double precision. Initial content of Cu in iron
0d0

numVac                  !<Integer. Number of initial vacancies put in
0

numInt                  !<Integer. Number of initial SIAs put in
0

dpaRate			        !<Double precision. DPA rate (unit: dpa/s).
1.4d-7

totalDPA                !<Double precision. Total DPA at the end of simulation (unit: dpa).
2.0d-1

firr                    !<Double precision. Radiation enhanced factor (firr = Cv / Ceqv)
7.69d5

lattice                 !<Double precision. Lattice constant (unit: nm).  atomVolume = lattice^3/2
0.2867d0

burgers                 !<Double precision. Dislocation loop burgers vector (unit: nm).
0.248d0

reactionRadius          !<Double precision. Reaction radius (unit: nm).
0.65d0

grainSize               !<Double precision. Mean free path for interstitial clusters to travel before removal (unit: nm).
3.0d4

dislocDensity           !<Double precision. Dislocation density (unit: nm^-2).
5.0d-5

impurityConc            !<Double precision. Carbon impurity concentration (unit: atom^-1).
0d0

max3DInt                !<Integer. Maximum size for SIA defect to diffuse in 3D.
1

cascadeVolume           !<Double precision. Volume of cascade (unit: nm^3).
1000d0

numSims                 !<Integer. Number of times to repeat simulation.
1

SimulationEnd		    !<Tag for the end of the simulation parameters

!***************************************************************************************************
!Anneal parameters
!***************************************************************************************************
AnnealStart

annealTemp              !<Double precision. Initial temperature of annealing (unit: K).
573d0

annealSteps             !<Integer. Total anneal steps.
0

annealTime              !<Double precision. Annealing time (unit: s)
0d0

annealType              !<('add' or 'mult') 'add': annealTemp += annealTempInc, 'mult': annealTemp *= annealTempInc
add

annealTempInc           !<Double precision. Increment time of annealing temperature (unit: K).
0d0

AnnealEnd

!***************************************************************************************************
!Output parameters
!***************************************************************************************************
OutputStart

totdatToggle    !<(‘yes’ or ‘no’) Whether to output of totdat.out file (contains defect populations and their statistics in the whole system)
yes

defectToggle    !<(‘yes’ or ‘no’) Whether to output of defect.out file (contains only defect populations in the whole system)
no

stadatToggle    !<(‘yes’ or ‘no’) Whether to output of stadat.out file (contains only statistics of defects in the whole system)
no

xyzdatToggle    !<(‘yes’ or ‘no’) Whether to output of xyzdata.out files (contains defect populations and their statistics in each mesh)
no

minSCluster     !<Integer. Only n>minSCluster SnVm and Sn clusters are counted
10

minVoid         !<Integer. Only n>minVoid Vn clusters are counted
10

minLoop         !<Integer. Only n>minLoop SIAn clusters are counted
10

minSV           !<Integer. Only (n+m)>minCuV SnVm clusters are counted
10

OutputEnd       !<Tag for the end of the Output parameters file

!***************************************************************************************************
!Adaptive meshing parameters
!***************************************************************************************************
MeshStart		!<Begin fine mesh parameters

length          !<Double precision. Length of one mesh (nm)
10d0

numx            !<Integer. Number of meshes in x-direction
40

numy            !<Integer. Number of meshes in y-direction
30

numz            !<Integer. Number of meshes in z-direction
20

fineLength      !<Double precision. Length of one fine mesh (nm)
5

numxFine        !<Integer. Number of fine meshes in x-direction
5

numyFine        !<Integer. Number of fine meshes in y-direction
5

numzFine        !<Integer. Number of fine meshes in z-direction
5

MeshEnd			!<The end of meshing parameters

